@@ -1,8 +1,10 @@
 2018-10-25 Fixed problem with loading math jax
 2018-10-25 Added new addon audio recorder
+201810-16 Hierarchical lesson report add maxscore link
 2018-10-16 Added property Plate Image in Catch module
 2018-10-15 Fixed iFrame visible in the editor when the hide option is enabled
 2018-10-12 Shooting range impoving the game.
+201810-11 Removed sending ValueChanged with value removed on stopping item drag in multiplegap
 2018-10-11 Removed sending ValueChanged with value removed on stopping item drag in multiplegap
 2018-10-10 Added disable dragging property in Ordering
 2018-10-09 Fixed scoring in multiplegap when incorrect answers are present
